# croque

./: .editorconfig  Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: build.yaml
src/: main.rs
src/command/: mod.rs
src/command/config/: agnoster.yaml  mod.rs
src/command/init/: init.bash  (+3 more)
src/config/: direnv.rs  duration.rs  gh_actions.rs  gh_pull_request.rs  git_status.rs  git_user.rs  glab_merge_request.rs  mod.rs  os.rs  path.rs  status.rs  style.rs  time.rs  user.rs
src/info/: gh.rs  git.rs  glab.rs  mod.rs
src/segment/: mod.rs  presenter.rs
src/shell/: mod.rs
tests/: config_test.rs  init_test.rs  prompt_test.rs
tests/helpers/: mod.rs
tests/snapshots/: config_test__config.snap  init_test__init_bash.snap  init_test__init_fish.snap  init_test__init_zsh.snap  prompt_test__duration__bash_0.0000001.snap  prompt_test__duration__bash_0.000001.snap  prompt_test__duration__bash_0.00001.snap  prompt_test__duration__bash_0.0001.snap  prompt_test__duration__bash_0.001234.snap  prompt_test__duration__bash_0.012345.snap  prompt_test__duration__bash_1.5.snap  prompt_test__duration__bash_3723.snap  prompt_test__duration__bash_65.snap  prompt_test__duration__fish_0.0000001.snap  prompt_test__duration__fish_0.000001.snap  prompt_test__duration__fish_0.00001.snap  prompt_test__duration__fish_0.0001.snap  prompt_test__duration__fish_0.001234.snap  prompt_test__duration__fish_0.012345.snap  prompt_test__duration__fish_1.5.snap  prompt_test__duration__fish_3723.snap  prompt_test__duration__fish_65.snap  prompt_test__duration__zsh_0.0000001.snap  prompt_test__duration__zsh_0.000001.snap  prompt_test__duration__zsh_0.00001.snap  prompt_test__duration__zsh_0.0001.snap  prompt_test__duration__zsh_0.001234.snap  prompt_test__duration__zsh_0.012345.snap  prompt_test__duration__zsh_1.5.snap  prompt_test__duration__zsh_3723.snap  prompt_test__duration__zsh_65.snap  prompt_test__git_status__bash_add_file.snap  prompt_test__git_status__bash_commit_file.snap  prompt_test__git_status__bash_empty_repo_main.snap  prompt_test__git_status__bash_empty_repo_master.snap  prompt_test__git_status__bash_modify_file.snap  prompt_test__git_status__bash_stage_file.snap  prompt_test__git_status__fish_add_file.snap  prompt_test__git_status__fish_empty_repo_main.snap  prompt_test__git_status__fish_empty_repo_master.snap  (+21 more)
(+19 files in other folders)
