[package]
name = "croque"
version = "0.5.2"
authors = ['Ryooooooga <eial5q265e5@gmail.com>']
description = "Fast and customizable shell prompt"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ryooooooga/croque"
edition = "2021"
keywords = [
    "bash",
    "fish",
    "shell",
    "prompt",
    "zsh",
]


[dependencies]
aho-corasick = "0.7"
nu-ansi-term = "0.47"
base64 = "0.21"
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
dirs = "5.0"
git2 = { version = "0.17", default-features = false }
hostname = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
unicode-width = "0.1"

[target."cfg(not(windows))".dependencies]
users = "0.11"
