[package]
name = "croq"
version = "0.8.0"
authors = ['voidxela <alex@xela.foo>']
description = "Fast and customizable shell prompt"
license = "MIT"
readme = "README.md"
repository = "https://github.com/voidxela/croq"
edition = "2021"
keywords = ["bash", "fish", "shell", "prompt", "zsh"]

[dependencies]
aho-corasick = "1.0"
nu-ansi-term = "0.50"
base64 = "0.22"
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
dirs = "5.0"
git2 = { version = "0.19", default-features = false }
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
unicode-width = "0.2"

[target."cfg(not(windows))".dependencies]
users = "0.11"
