[package]
name = "croque"
version = "0.8.0"
authors = ['Ryooooooga <eial5q265e5@gmail.com>']
description = "Fast and customizable shell prompt"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ryooooooga/croque"
edition = "2021"
keywords = ["bash", "fish", "shell", "prompt", "zsh"]

[dependencies]
aho-corasick = "1.0"
nu-ansi-term = "0.50"
base64 = "0.22"
bincode = "2.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
git2 = { version = "0.20", default-features = false }
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
unicode-width = "0.2"

[target."cfg(not(windows))".dependencies]
users = "0.11"
